cmake_minimum_required(VERSION 3.21)
project(c__)

set(CMAKE_CXX_STANDARD 14)

add_executable(c__1 main.cpp)
add_executable(c__2 c++-study.cpp)
add_executable(c__3 SqList.cpp)
add_executable(c__4 LinkList.cpp)
add_executable(c__5 Polynomial.cpp)
add_executable(c__6 Stack.cpp)
add_executable(c__7 Queue.cpp)
add_executable(c__8 String.cpp)
add_executable(c__9 BinaryTree.cpp)
add_executable(c__10 Sort.cpp)
add_executable(c__11 Graph.cpp)
add_executable(c__12 2018-1.cpp)
add_executable(c__13 2018-2.cpp)
add_executable(c__14 2018-3.cpp)
add_executable(c__15 2018-4.cpp)